Thu Sep 14 19:46:44 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add some tests for QuartzDbEntries object.  Need more.

	* Changed QuartzDbTable so that its methods merely Assert that keys
	  have non-zero length, rather than throwing exceptions.  This
	  condition should never arise.

Thu Sep 14 18:38:46 BST 2000 Olly Betts

	* Overhauled DEBUGCALL macros - now you can just use RETURN(...)
	  instead of return(...) in a method and the return value is dealt
	  with automatically.

Thu Sep 14 18:15:29 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added new exception OmInvalidDataError for bad data which
	  isn't really an API misuse.

	* Cleaned up the use of silly exceptions in the indexer code.

	* Indexer graph checks the XML source for validity.

	* Modified the DTD to allow list parameters as well as string.

Thu Sep 14 17:33:05 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Completed implementation of QuartzDbEntries.

Thu Sep 14 17:20:41 BST 2000 Olly Betts

	* Fixed some compiler warnings in stemmer code.

Thu Sep 14 17:09:53 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Rename QuartzDbBlocks to QuartzDbEntries and finish specifying the
	  interface.  Implementation is incomplete, but compiles.

	  This also removes the duplicate definition which was causing
	  includetest to fail.

	* QuartzDbDiffs now has a non-virtual apply() method - implementation
	  will be identical for all subclasses.

Thu Sep 14 15:06:24 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix the problem with max_or_terms and termfreqs of 0.  Test
	  maxorterms4 now passes.

Thu Sep 14 15:03:40 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add a test for doing max_or_terms when one of the query terms is
	  not in the database.

Wed Sep 13 19:07:11 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Small typo in DbTermList::get_termfreq() corrected.  Now works