@@ -1,3 +1,7 @@
+Fri Sep 15 09:07:04 BST 2000 Olly Betts
+
+	* HTML TODO list coloured by priority.
+
 Thu Sep 14 19:46:44 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Add some tests for QuartzDbEntries object.  Need more.
